src/rules/snapshots/pg_migration_lint__rules__pgm104__tests__money_fires.snap
---
source: src/rules/pgm104.rs
expression: findings
---
- rule_id: PGM104
  severity: Minor
  message: "Column 'total' on 'orders' uses the 'money' type. The money type depends on the lc_monetary locale setting, making it unreliable across environments. Use numeric(p,s) instead."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
